Get it to compile and fix spacing

--- a/src/Hedwig/ClientApp/src/assets/styles/_general.scss
+++ b/src/Hedwig/ClientApp/src/assets/styles/_general.scss
@@ -83,10 +83,11 @@ ol.no-list-counter > li:before {
 		margin-bottom: 0;
 	}
 
-	.usa-button {
-		@include u-margin-top(6);
-		@include u-margin-bottom(4);
-	}
+	// TODO: this was messing up other buttons-- does removing it cause any problems?
+	// .usa-button {
+	// 	@include u-margin-top(6);
+	// 	@include u-margin-bottom(4);
+	// }
 }
 
 .usa-form-group--warning {
